<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/materialCardViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        />


    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toTopOf="@id/guidelineCardViewLoginBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginCardViewLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginCardViewLoginStart"
        app:layout_constraintTop_toTopOf="@id/guidelineCardViewLoginTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/med_padding"
            android:background="@color/backgroundColor"
            android:paddingEnd="@dimen/min_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailLogin"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_field_height"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:textColorHint="@color/white"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@+id/tilPasswordLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/actEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"

                    android:maxLines="1"
                    android:padding="@dimen/input_field_padding"
                    android:paddingStart="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
                android:id="@+id/tilPasswordLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_field_height"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:importantForAutofill="no"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/input_field_padding" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/BaseOutlinedButton"
        android:layout_width="0dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_login_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginCardViewLoginEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginCardViewLoginStart"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/AutoSizeTextViewRegular"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_basic_text_size"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginCardViewLoginEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginCardViewLoginStart"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/SpecialOutlinedButton"
        android:layout_width="0dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/btn_create_account_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginCardViewLoginEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginCardViewLoginStart"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginCardViewLoginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginCardViewLoginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCardViewLoginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCardViewLoginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>

